--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,9 @@
-@import "tailwindcss";
+/* @import "tailwindcss"; */
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  interpolate-size: allow-keywords;
 }
 
 @theme inline {
@@ -19,8 +20,35 @@
   }
 }
 
+* {
+  box-sizing: border-box;
+  /* grid-area: 1/1/1/1; */
+  min-width: 0;
+  /* text-box: trim-both cap alphabetic; */
+}
+
+/* header,
+main,
+article,
+section,
+aside,
+footer,
+div {
+  display: contents;
+} */
+
+h1,
+h2,
+h3,
+h4 {
+  text-wrap: balance;
+}
+
 body {
+  /* display: grid;
+  grid-template-columns: repeat(12, 1fr); */
+  min-height: 100dvh;
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
