--- a/app/globals.css
+++ b/app/globals.css
@@ -51,4 +51,5 @@ body {
   background: var(--background);
   color: var(--foreground);
   /* font-family: Arial, Helvetica, sans-serif; */
+  background: url("../public/bg-1.png") repeat;
 }
